tests/semantic/invalid/scope_error.src
fn main() -> int {
    if (true) {
        int x = 10;
    }
    
    x = 20;
    return 0;
}
